# to-do-list-hexagonal

./: .env.sample  .gitignore  LICENSE  Makefile  Procfile  README.md  pyproject.toml  requests.rest  requirements.txt  setup.cfg  vercel.json
.github/: dependabot.yml
.github/workflows/: dependabot-approval.yml  standard.yaml
src/to_do_list_hex/adapters/: settings.py
src/to_do_list_hex/adapters/inbound/rest/: main.py
src/to_do_list_hex/adapters/inbound/rest/v1/controllers/: task.py
src/to_do_list_hex/adapters/outbound/db/: database.py  models.py
src/to_do_list_hex/adapters/outbound/db/alembic/: alembic.ini  env.py
src/to_do_list_hex/adapters/outbound/db/repositories/: task.py
src/to_do_list_hex/domain/use_cases/tasks/: create.py  delete.py  get_all.py  get_by_id.py  update.py
src/to_do_list_hexagonal/adapters/: settings.py
src/to_do_list_hexagonal/adapters/inbound/rest/: main.py
src/to_do_list_hexagonal/adapters/inbound/rest/v1/controllers/: ping.py  task.py  task_get.py
src/to_do_list_hexagonal/adapters/outbound/db/: database.py  models.py
src/to_do_list_hexagonal/adapters/outbound/db/alembic/: alembic.ini  env.py
src/to_do_list_hexagonal/adapters/outbound/db/alembic/versions/: b25368558c29_create_tasks_table.py
src/to_do_list_hexagonal/adapters/outbound/db/repositories/: custom_base.py  task.py
src/to_do_list_hexagonal/domain/entities/: task.py
src/to_do_list_hexagonal/domain/ports/inbound/task/: dtos.py
src/to_do_list_hexagonal/domain/use_cases/tasks/: create_task.py  delete.py  get_all.py  get_by_id.py  update.py
